# Software-engineering

./: .gitignore  DEPLOYMENT.md  README.md  pyproject.toml  requirements.txt
config/: sources.json
examples/: run_pipeline.py  run_web_scrapper.py
src/ti_framework/: __init__.py  cli.py  logging_utils.py
src/ti_framework/application/: pipeline_runner.py
src/ti_framework/config/: __init__.py  loaders.py  models.py
src/ti_framework/domain/: __init__.py  exceptions.py  models.py
src/ti_framework/infrastructure/: __init__.py
src/ti_framework/infrastructure/differs/: __init__.py  previous_snapshot_differ.py
src/ti_framework/infrastructure/fetchers/: web_entry_fetcher.py
src/ti_framework/infrastructure/filters/: __init__.py  internal_url_rule.py  invalid_domain_rule.py  rule_based_ioc_filter.py  (+1 more)
src/ti_framework/ports/: __init__.py  bundle_storage.py  differ.py  entry_fetcher.py  http.py  ioc_filter.py  parser.py  preprocessor.py  scrapper.py  stix_bundle_builder.py  storage.py
tests/: conftest.py  run_unit-tests.py  smoke-tests.py  test_application.py  test_cli_run.py  test_cli_status.py  test_cli_validate.py  test_config.py  test_e2e_stix_pipeline.py  test_infrastructure.py  test_ioc_filter.py  test_ioc_filter_pipeline_integration.py  test_logging_configuration.py  test_pipeline_resilience.py  test_ports.py  test_proofpoint_threat_insight_parser.py  test_securelist_parser.py  test_smoke.py  unit-test_application.py  unit-tests_domain.py  unit-tests_ports.py  validate_stix_bundle.py
tests/fixtures/: sec1275_entry_snapshot.json
tests/results/: tests.docx
(+17 files in other folders)
