[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ti-framework"
version = "0.1.0"
description = "Framework for collecting and processing threat intelligence snapshots"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31,<3.0",
  "beautifulsoup4>=4.12,<5.0",
  "stix2>=3.0,<4.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
ti-framework = "ti_framework.cli:main"
